style: :art: Change Style to material ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "paths": {
       "@/api/*": ["shared/api/*"],
       "@/components/*": ["shared/components/*"],
+      "@/config/*": ["shared/config/*"],
       "@/hooks/*": ["shared/hooks/*"],
       "@/utils/*": ["shared/utils/*"],
       "@/public/*": ["public/*"],
