--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.54.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
